kubernetes-operators/longhorn/frontend-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "longhorn-frontend"
  namespace: "longhorn-system"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "longhorn.k3s"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "longhorn-frontend"
                port:
                  number: 80
